syntax = "proto3";
option go_package = ".;api";
package v1;

service Worker {
    rpc Run(RunRequest) returns (stream EndpointResult) {}
}

message RunRequest {
    message Endpoint {
        string url = 1;
        uint32 weight = 2;
    }
    repeated Endpoint endpoints = 1;

    uint32 amount = 2;

    enum BrowserType {
        FAKE = 0;
        CHROME = 1;
    }
    BrowserType type = 3;

    uint32 minWaitTime = 4;
    uint32 maxWaitTime = 5;
}

message EndpointResult {
    string url = 1;
    int32  httpStatusCode = 2;
    string httpStatusMessage = 3;
    int32  ttfb = 4;
	bool   cached = 5;
}